--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/intro.css">
     <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="icon" href="./img/fav.png">
+    <link rel="icon" href="./images/fav.png">
     <title>С чистого листа</title>
 </head>
 <body> 
@@ -15,7 +15,7 @@
     <header class="content-section theme_dark header">
         
         <div class="header__logo">
-            <img src="./img/VЁRSTKA.svg" alt="VЁRSTKA">
+            <img src="./images/VЁRSTKA.svg" alt="VЁRSTKA">
         </div>
         
         <div class="header__menu inter-regular">
@@ -120,7 +120,7 @@
         </p>
 
         <div class="how-to-card card-dark">
-            <img class="portrait-picture" src="./img/image 13.png" alt="Алексей Поляринов">
+            <img class="portrait-picture" src="./images/polyarinov.png" alt="Алексей Поляринов">
 
             <p class="inter-bold">Алексей Поляринов</p>
 
@@ -135,7 +135,7 @@
         </div>
 
         <div class="how-to-card card-dark">
-            <img class="portrait-picture" src="./img/image 12.png" alt="Иван Бунин">
+            <img class="portrait-picture" src="./images/bunin.png" alt="Иван Бунин">
 
             <p class="inter-bold">Иван Бунин</p>
 
