moving cover picture

--- a/index.html
+++ b/index.html
@@ -17,21 +17,19 @@
             <img src="./images/VЁRSTKA.svg" alt="VЁRSTKA">
         </div>
         
-        <div class="header__menu inter-regular">
-
-            <div class="header__menu-item_active">
-                Главная
-            </div>
-
-            <div class="header__menu-item">
-                О нас
-            </div>
-
-            <div class="header__menu-item">
-                Контакты
-            </div>
-            
-        </div>
+        <nav class="header__menu inter-regular">
+            <ul class="ul-menu">
+                <li class="header__menu-item menu-active">
+                    Главная
+                </li>
+                <li class="header__menu-item">
+                    О нас
+                </li>
+                <li class="header__menu-item">
+                    Контакты
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <section class="content-section theme_dark cover eb-garamond-huge">
