--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="icon" href="./images/fav.png" />
+    <!---- Добавил свою иконку для красоты. В реальности согласовал бы с дизайнером, конечно) -->
     <title>С чистого листа</title>
   </head>
   <body>
@@ -15,6 +16,7 @@
           <a href="./index.html">
             <img src="./images/VЁRSTKA.svg" alt="VЁRSTKA" />
           </a>
+          <!-- Добавил ссылку на себя же, при публикации здесь был бы url -->
         </div>
 
         <nav class="header__menu inter-regular">
@@ -36,16 +38,9 @@
 
       <section class="content-section theme_dark intro">
         <header class="intro__heading inter-regular">
-          <p>
-            <!-- intro__title -->
-            8 способов борьбы со страхом чистого листа
-          </p>
+          <span> 8 способов борьбы со страхом чистого листа </span>
 
-          <time class="intro__heading-date">
-            <!-- intro__date -->
-            <!-- Для указания даты публикации используйте семантический тег time. Подробнее о нем почитайте на Доке. Даты обычно не переносят между строками, используйте для этого white-space: nowrap;.  -->
-            05.06.2022&nbsp;г.
-          </time>
+          <time> 05.06.2022&nbsp;г. </time>
         </header>
 
         <section class="intro_main">
@@ -158,6 +153,7 @@
           />
 
           <span class="inter-bold">Алексей Поляринов</span>
+          <!-- Не придумал какой-то отдельный тег: вроде и не заголовок, вроде и не просто текст, оставил span -->
 
           <h3 class="eb-garamond-regular">Начать любыми словами</h3>
 
@@ -196,15 +192,15 @@
 
           <h3 class="eb-garamond-regular">Сделать из задачи рутину</h3>
 
-          <blockquote>
-            class="inter-regular-weird"> «Писать стихи нужно каждый день,
-            подобно тому как скрипач или пианист непременно должен каждый день
-            без пропусков по нескольку часов играть на своём инструменте. В
-            противном случае ваш талант неизбежно оскудеет, высохнет, подобно
-            колодцу, откуда долгое время не берут воду. А о чём писать? О чём
-            угодно. Если у вас в данное время нет никакой темы, идеи, то пишите
-            просто обо всём, что увидите», — такой совет своему приятелю дал
-            Иван Бунин. Нет повода ему не следовать.
+          <blockquote class="inter-regular-weird">
+            «Писать стихи нужно каждый день, подобно тому как скрипач или
+            пианист непременно должен каждый день без пропусков по нескольку
+            часов играть на своём инструменте. В противном случае ваш талант
+            неизбежно оскудеет, высохнет, подобно колодцу, откуда долгое время
+            не берут воду. А о чём писать? О чём угодно. Если у вас в данное
+            время нет никакой темы, идеи, то пишите просто обо всём, что
+            увидите», — такой совет своему приятелю дал Иван Бунин. Нет повода
+            ему не следовать.
           </blockquote>
         </div>
       </section>
@@ -218,6 +214,7 @@
           <p class="inter-regular-footer">ВК</p>
           <p class="inter-regular-footer">Ютюб</p>
         </div>
+        <!-- Нужен ли здесь какой-то отдельный тег? Это «контакты»? -->
       </footer>
     </main>
   </body>
