--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="intro__heading inter-regular">
           <span> 8 способов борьбы со страхом чистого листа </span>
 
-          <time> 05.06.2022&nbsp;г. </time>
+          <time> 05.06.2022</time> <span>&nbsp;г. </span>
         </header>
 
         <section class="intro_main">
