--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           может быть очень много. Вот основные:
         </p>
 
-        <ul class="content-section inter-regular-weird">
+        <ul class="inter-regular-weird">
           <li>
             <span class="inter-bold">Неуверенность в результате.</span>
             <span
