Автотесты + ссылки в футере

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
       <span class="inter-regular-weird">© VЁRSTKA</span>
 
       <ul class="footer-subblock">
-        <a class="inter-regular-footer">ВК</a>
-        <a class="inter-regular-footer">Ютуб</a>
+        <li><a href="#">ВК</a></li>
+        <li><a href="#">Ютуб</a></li>
       </ul>
       <!-- Нужен ли здесь какой-то отдельный тег? Это «контакты»? -->
     </footer>
