--- a/index.html
+++ b/index.html
@@ -152,47 +152,47 @@
 
           <h3 class="how-to-card-title">Начать любыми словами</h3>
 
-          <blockquote class="how-to-card-text">
+          <p class="how-to-card-text">
             Любыми — без шуток. Если не верите нам, посмотрите, например, чем
             открывается эссе Алексея Поляринова «Чарли Кауфман: расширение
             пространства». Можно и менее радикально. Главное, чтобы пустую
             страницу начали заполнять символы. Получится своеобразная ловушка
             для мозга: он видит, что вы уже начали что-то делать, и ему
             становится легче войти в состояние потока.
-          </blockquote>
+          </p>
         </div>
 
         <div class="how-to-card card-light theme_bright">
           <h3 class="how-to-card-title">
             Поставить перед собой рамку для фотографии
           </h3>
-          <blockquote class="how-to-card-text">
+          <p class="how-to-card-text">
             Самую обычную: 10 на 15 сантиметров. Уже от одного ощущения, что
             предстоит работа над большой и сложной задачей, может пропасть
             всякое желание за неё браться. В такие моменты хорошо помогает
             загнать задачу в рамки — в прямом смысле. Сосредоточьтесь на том,
             чтобы заполнить только пространство 10х15 сантиметров. Что дальше —
             пока неважно.
-          </blockquote>
+          </p>
         </div>
 
-        <div class="how-to-card card-dark">
+        <div class="how-to-card card-dark" id="bunin">
           <img class="square_100px" src="./images/bunin.png" alt="Иван Бунин" />
 
           <span class="how-to-card-name">Иван Бунин</span>
 
           <h3 class="how-to-card-title">Сделать из задачи рутину</h3>
 
-          <blockquote class="how-to-card-text">
-            «Писать стихи нужно каждый день, подобно тому как скрипач или
+          <p class="how-to-card-text">
+            <q lang="ru">Писать стихи нужно каждый день, подобно тому как скрипач или
             пианист непременно должен каждый день без пропусков по нескольку
             часов играть на своём инструменте. В противном случае ваш талант
             неизбежно оскудеет, высохнет, подобно колодцу, откуда долгое время
             не берут воду. А о чём писать? О чём угодно. Если у вас в данное
             время нет никакой темы, идеи, то пишите просто обо всём, что
-            увидите», — такой совет своему приятелю дал Иван Бунин. Нет повода
+            увидите</q>, — такой совет своему приятелю дал Иван Бунин. Нет повода
             ему не следовать.
-          </blockquote>
+          </p>
         </div>
       </section>
     </main>
